Fix overflow - remove width

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,5 @@
 .root {
   height: 100vh;
-  width: 100vw;
-  overflow: hidden;
 }
 
 .container { 
